--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
     }
    ],
    "source": [
-    "!pip install -r ./requeriments.txt"
+    "!pip install -r ./requirements.txt"
    ]
   },
   {
