--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +358,7 @@
     "import statsmodels.api as sm\n",
     "np.float_ = np.float64\n",
     "from prophet import Prophet\n",
-    "from prophet.diagnostics import cross_validation, performance_metrics\n",
-    "from prophet.make_holidays import make_holidays_df"
+    "from prophet.diagnostics import cross_validation, performance_metrics\n"
    ]
   },
   {
