--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -395,17 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Captura dos dados\n",
-    "\n",
-    "Os dados do Ibovespa foram capturados a partir de 1995 através de um web scraping do site [investing.com](https://br.investing.com/indices/bovespa-historical-data) (código presente no arquivo extract.py)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Leitura dos dados\n",
-    "Para a análise só serão nessárias as colunas rowDate (data) e last_close (variável que será feita a previsão)"
+    "# Leitura dos dados\n"
    ]
   },
   {
@@ -553,13 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualização inicial dos dados\n",
-    "\n",
-    "* Visualmente é possível notar que a série tem uma tendência de crescimento.\n",
-    "* Vales no gráfico:\n",
-    "  * pouco depois de 2008 por conta da crise\n",
-    "  * em 2016 por conta do impeachment\n",
-    "  * em 2020 por conta da pandemia."
+    "## Visualização inicial dos dados"
    ]
   },
   {
@@ -660,7 +644,7 @@
     "## Criação dos Modelos\n",
     "\n",
     "### Definições\n",
-    "- **Janela de previsão:** Para criação dos modelos, escolhemos trabalhar com uma predição curta de 5 dias. O mercado é extremamente dinâmico, e os preços são influenciados por uma série de fatores que mudam rapidamente, como notícias econômicas, decisões políticas e até eventos globais inesperados. Ao prever apenas cinco dias à frente, conseguimos capturar essas mudanças mais imediatas sem deixar que o modelo seja afetado com incertezas que aumentam em horizontes mais longos. Portanto, a escolha da janela de 5 dias é uma forma de focar em previsões mais acionáveis e ajustadas à realidade do mercado, sem tentar adivinhar o futuro distante com pouca precisão.<br><br>\n",
+    "- **Janela de previsão:** Para criação dos modelos, escolhemos trabalhar com uma predição curta de 15 dias. O mercado é extremamente dinâmico, e os preços são influenciados por uma série de fatores que mudam rapidamente, como notícias econômicas, decisões políticas e até eventos globais inesperados. Ao prever apenas quinze dias à frente, conseguimos capturar essas mudanças mais imediatas sem deixar que o modelo seja afetado com incertezas que aumentam em horizontes mais longos. Portanto, a escolha da janela de 15 dias é uma forma de focar em previsões mais ajustadas à realidade, sem tentar adivinhar o futuro distante com pouca precisão.<br><br>\n",
     "- **Método de teste:** Ao escolher utilizar uma janela de tempo curta, não faz sentido testar os modelos utilizando o método tradicional de separar os dados em treino e teste. Ao invés disso, iremos testar com base no método cross-validation, que percorre a série temporal fazendo previsões em vários pontos, dando um resultado mais confiável e evitando o overfit."
    ]
   },
@@ -721,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -735,8 +719,7 @@
    ],
    "source": [
     "model = StatsForecast(models=[HistoricAverage(), Naive(), RandomWalkWithDrift(), SeasonalNaive(season_length=5), WindowAverage(window_size=15), SeasonalWindowAverage(season_length=5, window_size=15)], freq=\"B\", n_jobs=-1)\n",
-    "df_cross = model.cross_validation(df=df_stats_forecast, h=15, step_size=60, n_windows=114\n",
-    ")\n",
+    "df_cross = model.cross_validation(df=df_stats_forecast, h=15, step_size=60, n_windows=114)\n",
     "df_cross = df_cross.dropna()"
    ]
   },
@@ -882,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +879,7 @@
    ],
    "source": [
     "model = StatsForecast(models=[AutoARIMA(d=1)], freq=\"B\", n_jobs=-1)\n",
-    "df_cross_arima = model.cross_validation(df=df_status_forecast, h=15, step_size=60, n_windows=114\n",
+    "df_cross_arima = model.cross_validation(df=df_stats_forecast, h=15, step_size=60, n_windows=114\n",
     ")\n",
     "df_cross_arima = df_cross_arima.dropna()"
    ]
